--- a/app/src/main/res/layout/activity_verify.xml
+++ b/app/src/main/res/layout/activity_verify.xml
@@ -11,27 +11,23 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="20dp"
-        tools:ignore="UselessParent">
+        android:padding="20dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_otp_code"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/input_box_bg"
-            android:hint="@string/enter_otp"
+            android:hint="OTP"
             android:padding="15dp"
-            android:inputType="number"
-            tools:ignore="MissingConstraints">
-
-        </com.google.android.material.textfield.TextInputEditText>
+            android:inputType="number"/>
 
         <Button
             android:id="@+id/verify_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="@string/verify_code"
+            android:text="@string/verify_btn"
             android:padding="10dp">
 
         </Button>
